<resources>
    <string name="app_name">MindSharpener</string>
    <string name="text2">This a simple mathematic games which is believe can train your mind. Two numbers are given randomly based on your level choice with a mathematic operator. You just calculates the answer, write your answer and press check button. Every correct answer wil give you 1 point and any wrong answer will deduct 1 point</string>
    <string name="instructions">Instructions: </string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="check">CHECK</string>
</resources>